# cvAutoTrack.Inface

./: CMakeLists.txt  Impl Design.drawio  README.md
.github/workflows/: artifacts.yml  windows.yml
cmake/: cmake_env.cmake
include/: cvAutoTrack.Inface.h
source/: CMakeLists.txt  Inface.define.h  Inface.library.h  Inface.network.h  Inface.powershell.h  Inface.regerr.h  cvAutoTrace.Inface.h  cvAutoTrack.Inface.cpp  cvAutoTrack.Inface.h  errdef.h  global.define.h  module.api.cpp  module.error.cpp  module.impl.cpp  module.inface.cpp  module.local.cpp  module.online.cpp  module.progress.cpp  module.string.cpp  module.task.cpp  module.version.cpp  string.convert.h  string.match.h
source/impl/: impl.api.cpp
source/resource/: resource.version.hpp.in  version.hash
tests/: CMakeLists.txt  main.cpp
tests/test_csharp/: Program.cs  cvAutoTrackInterface.cs  cvAutoTrackNative.cs
tests/test_network/: CMakeLists.txt  main.cpp
